--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -5,7 +5,7 @@
 }
 
 .headerContent {
-	width: 1120px;
+	max-width: 1024px;
 	height: 5rem;
 	margin: 0 auto;
 	display: flex;
@@ -50,6 +50,21 @@
 					position: absolute;
 				}
 			}
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.headerContent {
+		max-width: 100vw;
+
+		nav {
+			display: none;
+		}
+		img {
+			width: 100px;
+			height: 30px;
+			margin-right: 2rem;
 		}
 	}
 }
