--- a/src/components/UserMenuBotton/index.module.scss
+++ b/src/components/UserMenuBotton/index.module.scss
@@ -1,3 +1,23 @@
+.containerUser {
+	margin: 0 auto;
+	display: flex;
+	span {
+		font-size: 0.9rem;
+	}
+}
+
+.iconUser {
+	height: 3rem;
+	border: 0px;
+	border-radius: 3rem;
+	width: 3rem;
+	background-color: var(--gray-500);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-right: 1rem;
+}
+
 .buttonSing {
 	background-color: var(--gray-500);
 	border: 0px;
