--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -3,6 +3,11 @@
 	height: 5rem;
 	border-bottom: 1px solid var(--gray-500);
 }
+.Logo {
+	width: 150px;
+	height: 40px;
+	margin-right: 2rem;
+}
 
 .headerContent {
 	max-width: 1024px;
@@ -12,45 +17,53 @@
 	justify-items: center;
 	align-items: center;
 
-	img {
-		width: 150px;
-		height: 40px;
-		margin-right: 2rem;
-	}
 	nav {
-		margin-left: 5rem;
-		height: 5rem;
+		ul {
+			display: flex;
 
-		a {
-			display: inline-block;
-			padding: 0 0.5rem;
-			color: var(--gray-400);
-			position: relative;
-			line-height: 5rem;
-			transition: color 0.2s;
-			&:hover {
-				color: var(--white);
-			}
-			& + a {
-				margin-left: 2rem;
-			}
+			li {
+				margin-left: 3rem;
+				height: 5rem;
+				list-style: none;
 
-			&.isActive {
-				color: var(--white);
-				font-weight: bold;
+				a {
+					display: inline-block;
+					padding: 0 0.5rem;
+					color: var(--gray-400);
+					position: relative;
+					line-height: 5rem;
+					transition: color 0.2s;
+					
+					&:hover {
+						color: var(--white);
+					}
+					& + a {
+						margin-left: 2rem;
+					}
 
-				&::after {
-					content: "";
-					width: 100%;
-					border-radius: 3px 3px 0 0;
-					bottom: 1px;
-					left: 0;
-					background-color: var(--red-500);
-					height: 3px;
-					position: absolute;
+					&.isActive {
+						color: var(--white);
+						font-weight: bold;
+
+						&::after {
+							content: "";
+							width: 100%;
+							border-radius: 3px 3px 0 0;
+							bottom: 1px;
+							left: 0;
+							background-color: var(--red-500);
+							height: 3px;
+							position: absolute;
+						}
+					}
 				}
 			}
 		}
+	}
+
+	.menuMobile {
+		display: none;
+		margin: 0 1rem;
 	}
 }
 
@@ -65,6 +78,10 @@
 			width: 100px;
 			height: 30px;
 			margin-right: 2rem;
+		}
+		.menuMobile {
+			display: flex;
+			margin: 0 1rem;
 		}
 	}
 }
