--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -9,8 +9,13 @@
 	margin-right: 2rem;
 }
 
+.ButtonSing {
+	margin-left: auto;
+}
+
 .headerContent {
-	max-width: 1024px;
+	max-width: 1120px;
+	padding: 0 2rem;
 	height: 5rem;
 	margin: 0 auto;
 	display: flex;
@@ -31,9 +36,10 @@
 					padding: 0 0.5rem;
 					color: var(--gray-400);
 					position: relative;
+					height: 5rem;
 					line-height: 5rem;
 					transition: color 0.2s;
-					
+
 					&:hover {
 						color: var(--white);
 					}
