--- a/src/components/UserMenuBotton/index.module.scss
+++ b/src/components/UserMenuBotton/index.module.scss
@@ -3,6 +3,8 @@
 	display: flex;
 	margin-left: 1rem;
 	left: 0;
+	justify-content: right;
+
 	span {
 		font-size: 0.9rem;
 	}
@@ -49,5 +51,22 @@
 	transition: filter 0.2s;
 	&:hover {
 		filter: brightness(0.9);
+	}
+}
+
+.containerMenu {
+	position: absolute;
+	margin-top: 3.5rem;
+
+	padding: 1rem;
+	border-radius: 1rem;
+	background-color: var(--gray-500);
+
+	ul {
+		li {
+			list-style: none;
+			padding: 1rem;
+			line-height: 1rem;
+		}
 	}
 }
