update menu Dropdown

--- a/src/components/UserMenuBotton/index.module.scss
+++ b/src/components/UserMenuBotton/index.module.scss
@@ -53,20 +53,57 @@
 		filter: brightness(0.9);
 	}
 }
+@keyframes animationMenu {
+	0% {
+		opacity: 0;
+		margin-top: -3rem;
+	}
+	50% {
+		opacity: 1;
+		margin-top: 4rem;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+@keyframes animationMenuClose {
+	0% {
+		opacity: 1;
+	}
 
+	50% {
+		margin-top: 4rem;
+	}
+	100% {
+		opacity: 0;
+		margin-top: -3rem;
+	}
+}
 .containerMenu {
 	position: absolute;
 	margin-top: 3.5rem;
-
 	padding: 1rem;
+	display: flex;
 	border-radius: 1rem;
 	background-color: var(--gray-500);
+	animation-name: animationMenu;
+	animation-duration: 0.8s;
 
 	ul {
 		li {
 			list-style: none;
 			padding: 1rem;
 			line-height: 1rem;
+			color: var(--gray-400);
+			&:hover {
+				color: var(--white);
+			}
 		}
 	}
+}
+.containerMenuClose {
+	@extend .containerMenu;
+	animation-name: animationMenuClose;
+	animation-duration: 0.8s;
+	display: none;
 }
